--- a/Web-Supervisor/package.json
+++ b/Web-Supervisor/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@types/leaflet": "^1.9.21",
     "axios": "^1.13.4",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.1.0",
     "leaflet": "^1.9.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-leaflet": "^5.0.0",
-    "react-router-dom": "^7.13.0"
+    "react-router-dom": "^7.13.0",
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
