--- a/G-App/package.json
+++ b/G-App/package.json
@@ -18,6 +18,7 @@
     "expo-build-properties": "~1.0.10",
     "expo-camera": "~17.0.10",
     "expo-font": "~14.0.11",
+    "expo-image-picker": "~17.0.10",
     "expo-location": "~19.0.8",
     "expo-status-bar": "~3.0.9",
     "nativewind": "^2.0.11",
