--- a/Web-Supervisor/package.json
+++ b/Web-Supervisor/package.json
@@ -13,7 +13,7 @@
     "@types/leaflet": "^1.9.21",
     "axios": "^1.13.4",
     "html2canvas": "^1.4.1",
-    "jspdf": "^4.1.0",
+    "jspdf": "^4.2.0",
     "leaflet": "^1.9.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -24,6 +24,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/html2canvas": "^0.5.35",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
